[gd_scene load_steps=7 format=3 uid="uid://ccbclg8vrknbp"]

[ext_resource type="Script" path="res://button.gd" id="1_87x3l"]
[ext_resource type="AudioStream" uid="uid://cq8tg3ynomm6l" path="res://Sounds/minecraft_click.mp3" id="2_ceu1m"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xye7t"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_y8vds"]
albedo_color = Color(0.427451, 0.862745, 0.337255, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2cjf8"]
albedo_color = Color(0.980392, 0, 0.137255, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_d2sg0"]
size = Vector3(0.5, 0.3, 0.5)

[node name="button" type="Area3D"]
collision_layer = 7
collision_mask = 7
script = ExtResource("1_87x3l")

[node name="CSGBox3D" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.15482, 0, 0, 0, 1, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_xye7t")

[node name="Green" type="CSGBox3D" parent="."]
transform = Transform3D(0.847757, 0, 0, 0, 0.254271, 0, 0, 0, 0.831813, 0, 0.0836783, 0)
material_override = SubResource("StandardMaterial3D_y8vds")

[node name="Red" type="CSGBox3D" parent="."]
transform = Transform3D(0.847757, 0, 0, 0, 0.168561, 0, 0, 0, 0.831813, 0, 0.0545954, 0)
visible = false
material_override = SubResource("StandardMaterial3D_2cjf8")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0692818, 0)
shape = SubResource("BoxShape3D_d2sg0")

[node name="buttonClick" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_ceu1m")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
